--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 
 <html>
   <head>
-    <title>Ethjs ENS</title>
+    <title>PuffsJS ENS</title>
   </head>
 
   <body>
-    <h1>EthJS ENS Example</h1>
+    <h1>PuffsJS ENS Example</h1>
 
     <input id="lookupField" placeholder="vitalik.eth"></input>
     <button id="searchButton">Search</button>
@@ -15,7 +15,7 @@
     <p id="resultField"></p>
 
     <br>
-    <a href="https://github.com/ethjs/ethjs-ens">View the source code on Github</a>
+    <a href="https://github.com/puffscoin/puffsjs-ens">View the source code on Github</a>
 
   </body>
 
