--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>PuffsJS ENS Example</h1>
 
-    <input id="lookupField" placeholder="vitalik.eth"></input>
+    <input id="lookupField" placeholder="legalize.puffs"></input>
     <button id="searchButton">Search</button>
     <br>
     <p>Result: </p>
